--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
       }
       getLocation();
     </script>
-    <div class="container">
+    <div class="container-narrow">
       <div class="jumbotron">
         <h1>Oh god, I need coffee</h1>
         <button class="btn btn-large">Nearest Coffee Places</button>
